@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.digi.ro-online"
        name="Digi.ro-Online"
-       version="1.3.0.a"
+       version="1.3.0.b"
        provider-name="dexterke, Secret Laboratories">
   <requires>
     <import addon="xbmc.python" version="2.20.0"/>
